--- a/style.css
+++ b/style.css
@@ -46,3 +46,61 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+@font-face {
+  font-family: 'Avenir';
+  src: url('assets/fonts/Avenir.ttc') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+a{
+	text-decoration: none;
+}
+/********** HEADER **********/
+
+header{
+	width:100%;
+	height:120px;
+	font-family: 'Avenir';
+}
+
+header div#logo{
+	float:left;
+	margin:46px 0 0 100px;
+}
+
+header nav{
+	float:right;
+	margin: 0 100px 0 0;
+}
+
+header nav ul li{
+	display: inline-block;
+	height:40px;
+	font-size: 16px;
+	line-height: 26px;
+	margin:40px 80px 0 0;
+	text-align: center;
+}
+
+header nav ul button.btn-donate{
+	width:156px;
+	height:40px;
+	background: #f8b195;
+	color: #FFF;
+	border-radius:100px;
+	outline: none;
+	border: none;
+
+}
+
+header nav ul button a{
+	color:#FFF;
+	margin-top:5px;
+	font-size:16px;
+}
+
+
+
