--- a/style.css
+++ b/style.css
@@ -243,5 +243,30 @@ main{
 }
 
 
+/********** FOOTER **********/
+
+footer{
+	position:absolute;
+	bottom:0;
+	width:100%;
+	height: 50px;
+	background: green;
+	font-family: 'Avenir';
+}
+
+footer div{
+	width: 100%;
+	position: relative;
+	top: 40%;
+}
+
+footer div h3{
+	float: right;
+	margin: 0 100px 0 0;
+}
+
+
+
+
 
 
