--- a/style.css
+++ b/style.css
@@ -72,6 +72,12 @@ a{
 	text-decoration: none;
 }
 
+div.line{
+	margin: 8px 0;
+	height: 2px;
+	width: 50px;
+	background: #f8b195;
+}
 
 /********** HEADER DESKTOP**********/
 
@@ -343,6 +349,77 @@ main#etape.container div.etape-next div.btn-etape-next button:hover{
 	cursor: pointer;
 }
 
+
+
+/********** MENTIONS **********/
+
+main#mentions.container{
+	height: auto;
+	margin:0 100px 0 100px;
+	background: #FFF;
+}
+
+main#mentions.container h1, main#mentions.container h2{
+	font-family: 'Avenir';
+	font-weight: bold;
+	font-size: 18px;
+	height: 25px;
+}
+
+main#mentions.container h1{
+	margin: 50px 0 0 0;
+}
+
+main#mentions.container h2{
+	margin: 50px 0 0 0;
+}
+
+main#mentions.container p{
+	font-family: 'Avenir';
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 29px;
+	margin: 20px 0 30px 0;
+}
+
+
+/********** FASSOCIATION **********/
+
+main#association.container{
+	height: auto;
+	margin:0 100px 0 100px;
+	background: #FFF;
+}
+
+main#association.container aside{
+	float: left;
+	height: 1000px;
+	width: 50%;
+	background: url(assets/images/association.jpg) no-repeat center;
+	margin:50px 0 0 0;
+}
+
+main#association.container article{
+	float: left;
+	width: 42%;
+	margin:50px 0 0 8%;
+}
+
+main#association.container h1, main#association.container h2{
+	font-family: 'Avenir';
+	font-weight: bold;
+	font-size: 18px;
+	height: 25px;
+}
+
+main#association.container p{
+	font-family: 'Avenir';
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 30px;
+	margin: 20px 0 30px 0;
+}
+
 /********** FOOTER **********/
 
 footer{
@@ -402,5 +479,19 @@ footer div h3{
 
 	main#etape.container aside{
 		display: none;
+	}
+
+	main#association.container article{
+		width: 100%;
+		height: auto;
+		float: left;
+		margin:30px 0;
+	}
+
+	main#association.container aside{
+		width: 100%;
+		height: 500px;
+		background: url(assets/images/association-mobile.jpg) no-repeat center;
+		margin:30px 0;
 	}
 }
