--- a/style.css
+++ b/style.css
@@ -555,6 +555,7 @@ main#association.container aside{
 
 main#association.container article{
 	float: left;
+	background: #FFF;
 	width: 42%;
 	margin:50px 0 0 8%;
 }
@@ -1152,6 +1153,26 @@ footer div h3 a{
 	main .container .column-right .photo5 {
 		width:100%;
 		height:200px;
+	}
+
+	main#etapes.container{
+		margin:0 4% 0 4%;
+	}
+
+	main#association.container{
+		margin:0 4% 0 4%;
+	}
+
+	main#dons.container{
+		margin:0 4% 0 4%;
+	}
+
+	main#donateurs.container{
+		margin:0 4% 0 4%;
+	}
+
+	main#mentions.container{
+		margin:0 4% 0 4%;
 	}
 }
 
